--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
     "typescript": "4.9.3",
-    "unified": "^10.1.2"
+    "unified": "^10.1.2",
+    "@supabase/supabase-js": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
