fix: update style

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@geoffcodesthings/tailwind-md-base": "^1.1.0",
     "@supabase/supabase-js": "^2.1.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "clsx": "^1.2.1",
     "daisyui": "^2.42.0",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
@@ -28,13 +30,18 @@
     "next": "13.0.5",
     "node-fetch": "^3.3.0",
     "octokit": "^2.0.10",
+    "preline": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-icons": "^1.1.0",
+    "react-markdown": "^8.0.4",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
     "remark-parse": "^10.0.1",
     "remark-rehype": "^10.1.0",
+    "remark-toc": "^8.0.1",
     "typescript": "4.9.3",
     "unified": "^10.1.2"
   },
