--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-fetch": "^3.3.0",
     "octokit": "^2.0.10",
     "preline": "^1.4.0",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-icons": "^1.1.0",
