--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-loading-icons": "^1.1.0",
     "react-markdown": "^8.0.4",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
