--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@geoffcodesthings/tailwind-md-base": "^1.1.0",
-    "@supabase/supabase-js": "^2.1.1",
+    "@supabase/supabase-js": "^2.39.3",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -28,9 +28,10 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "jsdom": "^20.0.3",
-    "next": "13.0.5",
+    "next": "14.1.0",
     "node-fetch": "^3.3.0",
     "octokit": "^2.0.10",
+    "posthog-js": "^1.103.1",
     "preline": "^1.4.0",
     "prettier": "^2.8.1",
     "react": "18.2.0",
